--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ dependencies = [
     "urllib3==2.4.0",
     "pytest==8.4.0",
     "tzdata",
+    "polyline==2.0.2",
+    "beautifulsoup4==4.13.4",
+    "google-api-python-client==2.172.0",
 ]
 
 [project.scripts]
