--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "polyline==2.0.2",
     "beautifulsoup4==4.13.4",
     "google-api-python-client==2.172.0",
+    "openrouteservice==2.3.3",
 ]
 
 [project.scripts]
