--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,10 @@ dependencies = [
     "beautifulsoup4==4.13.4",
     "google-api-python-client==2.172.0",
     "openrouteservice==2.3.3",
+    "poetry==2.1.3",
+    "Flask==3.1.1",
+
+
 ]
 
 [project.scripts]
